# picoruby-esp32

./: CMakeLists.txt  README.md  idf_component.yml  picoruby-esp32.c
.github/: dependabot.yml
build_config/: riscv-esp-femtoruby.rb  riscv-esp-microruby.rb  riscv-esp-picoruby.rb  riscv-esp-wifi.rb  riscv-esp.rb  xtensa-esp-femtoruby.rb  xtensa-esp-microruby.rb  xtensa-esp-picoruby.rb  xtensa-esp-wifi.rb  xtensa-esp.rb
mrblib/: main_task.rb  main_task_microruby.rb
